sandbox/output
fizzbuzz_tests.c: In function 'fizzbuzzTests':
fizzbuzz_tests.c:46:2: error: expected expression before '/' token
 */
  ^
make: *** [test] Error 1
